feat: navbar functionality

--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -28,7 +28,8 @@
   visibility: hidden;
   pointer-events: none;
 }
-.drawer.active {
+.drawerActive {
+  composes: drawer;
   visibility: visible;
   pointer-events: auto;
 }
