--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,3 +1,8 @@
+.btncontainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .btn {
   color: #fff;
   background-color: #2acfcf;
@@ -6,12 +11,20 @@
   border: none;
   font-family: "Poppins", sans-serif;
   cursor: pointer;
-  font-size: 1.5em;
+  font-size: 1em;
+  margin-bottom: 20px;
 }
+
 @media (min-width: 768px) {
   .btn {
     padding: 10px 40px;
     font-size: 1.2em;
     /* border-radius: 20px; */
+  }
+  .btn:hover {
+    background-color: #80dfdf;
+  }
+  .btncontainer {
+    justify-content: left;
   }
 }
