--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -29,6 +29,9 @@
   text-decoration: none;
   color: hsl(0, 0%, 75%);
 }
+.footerlink:hover {
+  color: cyan;
+}
 .footerlink .header {
   color: #fff;
 }
