--- a/src/components/AdvancedStatistics/AdvancedStatisticsCard/AdvancedStatisticsCard.module.css
+++ b/src/components/AdvancedStatistics/AdvancedStatisticsCard/AdvancedStatisticsCard.module.css
@@ -1,4 +1,4 @@
-.section1content2 {
+.section {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,8 +12,13 @@
   text-align: center;
   padding: 0 15px 60px;
 }
+
 @media (min-width: 768px) {
-  .section1content2 {
+  .section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: #f9f7fd;
   }
   .h2 {
